--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,24 +13,12 @@ bind r source-file ~/.tmux.conf
 # colors
 set -g default-terminal "screen-256color"
 
+# mouse
+set -g mouse on
+
 # start window numbering at 1 for easier switching
 set -g base-index 1
 setw -g pane-base-index 1
-
-# status bar settings
-set-option -g allow-rename off
-set -g status-bg black
-set -g status-fg green
-set -g status-left '#h:[#S]'
-set -g status-left-length 50
-set -g status-right-length 50
-setw -g window-status-current-format "|#I:#W|"
-setw -g window-status-current-fg colour166
-setw -g window-status-current-bg black
-set-window-option -g automatic-rename off
-
-# border coloring for panes
-set-option -g pane-active-border-fg colour166
 
 # listen to alerts from all windows
 set -g bell-action any
@@ -61,12 +49,6 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-# vim style buffer copy
-bind [ copy-mode
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
-bind -t vi-copy V rectangle-toggle
-bind ] paste-buffer
 
 # buffer
 bind Space choose-buffer
@@ -77,3 +59,71 @@ bind + resize-pane -U 5
 bind < resize-pane -L 5
 bind > resize-pane -R 5
 
+
+######################
+### LOOK & FEEL ###
+######################
+#
+# Powerline Blue - Tmux Theme
+# Created by Jim Myhrberg <contact@jimeh.me>.
+#
+# Inspired by vim-powerline: https://github.com/Lokaltog/powerline
+#
+# Requires terminal to be using a powerline compatible font, find one here:
+# https://github.com/Lokaltog/powerline-fonts
+#
+
+# Status update interval
+set -g status-interval 1
+
+# Basic status bar colors
+set -g status-style fg=colour238,bg=colour233
+
+# Left side of status bar
+set -g status-left-style bg=colour233,fg=colour243
+set -g status-left-length 40
+set -g status-left "#[fg=colour232,bg=colour24,bold] #S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
+
+# Right side of status bar
+set -g status-right-style bg=colour233,fg=colour243
+set -g status-right-length 150
+set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]"
+
+# Window status
+set -g window-status-format "  #I:#W#F  "
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour33,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
+
+# Current window status
+set -g window-status-current-style bg=colour100,fg=colour235
+
+# Window with activity status
+set -g window-status-activity-style bg=colour233,fg=colour245
+
+# Window separator
+set -g window-status-separator ""
+
+# Window status alignment
+set -g status-justify centre
+
+# Pane border
+set -g pane-border-style bg=default,fg=colour238
+
+# Active pane border
+set -g pane-active-border-style bg=default,fg=colour24
+
+# Pane number indicator
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
+
+# Clock mode
+set -g clock-mode-colour colour24
+set -g clock-mode-style 24
+
+# Message
+set -g message-style bg=colour24,fg=black
+
+# Command message
+set -g message-command-style bg=colour233,fg=black
+
+# Mode
+set -g mode-style bg=colour24,fg=colour231
