Changed TMUX to gruvbox

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,70 +60,100 @@ bind < resize-pane -L 10
 bind > resize-pane -R 10
 
 
-######################
-### LOOK & FEEL ###
-######################
-#
-# Powerline Blue - Tmux Theme
-# Created by Jim Myhrberg <contact@jimeh.me>.
-#
-# Inspired by vim-powerline: https://github.com/Lokaltog/powerline
-#
-# Requires terminal to be using a powerline compatible font, find one here:
-# https://github.com/Lokaltog/powerline-fonts
-#
-
-# Status update interval
 set -g status-interval 1
 
-# Basic status bar colors
-set -g status-style fg=colour238,bg=colour233
+## COLORSCHEME: gruvbox dark
 
-# Left side of status bar
-set -g status-left-style bg=colour233,fg=colour243
-set -g status-left-length 40
-set -g status-left "#[fg=colour232,bg=colour24,bold] #S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
+set-option -g status "on"
 
-# Right side of status bar
-set -g status-right-style bg=colour233,fg=colour243
-set -g status-right-length 150
-set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]"
 
-# Window status
-set -g window-status-format "  #I:#W#F  "
-set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour33,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
 
-# Current window status
-set -g window-status-current-style bg=colour100,fg=colour235
+# default statusbar color
 
-# Window with activity status
-set -g window-status-activity-style bg=colour233,fg=colour245
+set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
-# Window separator
-set -g window-status-separator ""
 
-# Window status alignment
-set -g status-justify centre
 
-# Pane border
-set -g pane-border-style bg=default,fg=colour238
+# default window title colors
 
-# Active pane border
-set -g pane-active-border-style bg=default,fg=colour24
+set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
 
-# Pane number indicator
-set -g display-panes-colour colour233
-set -g display-panes-active-colour colour245
 
-# Clock mode
-set -g clock-mode-colour colour24
-set -g clock-mode-style 24
 
-# Message
-set -g message-style bg=colour24,fg=black
+# default window with an activity alert
 
-# Command message
-set -g message-command-style bg=colour233,fg=black
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
 
-# Mode
-set -g mode-style bg=colour24,fg=colour231
+
+
+# active window title colors
+
+set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+
+
+
+# pane border
+
+set-option -g pane-active-border-style fg=colour250 #fg2
+
+set-option -g pane-border-style fg=colour237 #bg1
+
+
+
+# message infos
+
+set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+
+
+
+# writing commands inactive
+
+set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+
+
+
+# pane number display
+
+set-option -g display-panes-active-colour colour250 #fg2
+
+set-option -g display-panes-colour colour237 #bg1
+
+
+
+# clock
+
+set-window-option -g clock-mode-colour colour109 #blue
+
+
+
+# bell
+
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+
+
+
+## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+
+set-option -g status-justify "left"
+
+set-option -g status-left-style none
+
+set-option -g status-left-length "80"
+
+set-option -g status-right-style none
+
+set-option -g status-right-length "80"
+
+set-window-option -g window-status-separator ""
+
+
+
+set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
+
+set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
+
+
+
+set-window-option -g window-status-current-format "#[fg=colour237, bg=colour214, nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
+
+set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
