--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -9,5 +9,12 @@
     "scss",
     "html",
     "json"
-  ]
+  ],
+  "explorer.width": 30,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.previewAction.onHover": false,
+  "explorer.keyMappings": {
+    "<cr>": ["expandable?", "expand", "open"],
+    "v": "open:vsplit"
+  }
 }
