--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ bind r source-file ~/.tmux.conf
 
 # colors
 set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ',xterm-256color:Tc'
+
+
 
 # mouse
 set -g mouse on
