--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -8,7 +8,8 @@
     "javascriptreact",
     "scss",
     "html",
-    "json"
+    "json",
+    "rust"
   ],
   "explorer.width": 50,
   "explorer.icon.enableNerdfont": true,
