--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -31,20 +31,20 @@ background_opacity: 1.0
 
 font:
   normal:
-    family: "FiraCode Nerd Font"
+    family: "FiraCode Nerd Font Mono"
     style: Regular
   bold:
-    family: "FiraCode Nerd Font"
+    family: "FiraCode Nerd Font Mono"
     style: Bold
   italic:
-    family: "FiraCode Nerd Font"
+    family: "FiraCode Nerd Font Mono"
     style: Italic
   bold_italic:
-    family: "FiraCode Nerd Font"
+    family: "FiraCode Nerd Font Mono"
     style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 16.0
 
   offset:
     x: 0
@@ -84,4 +84,3 @@ key_bindings:
   - { key: Add, mods: Control, action: IncreaseFontSize }
   - { key: Subtract, mods: Control, action: DecreaseFontSize }
   - { key: Minus, mods: Control, action: DecreaseFontSize }
-  - { key: N, mods: Control, action: SpawnNewInstance }
