--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ bind r source-file ~/.tmux.conf
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
-" stop messing with escape
+# stop messing with escape
 set -sg escape-time 0
 
 # mouse
