--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -31,16 +31,16 @@ background_opacity: 1.0
 
 font:
   normal:
-    family: "FiraCode Nerd Font Mono"
+    family: "Hack Nerd Font"
     style: Regular
   bold:
-    family: "FiraCode Nerd Font Mono"
+    family: "Hack Nerd Font"
     style: Bold
   italic:
-    family: "FiraCode Nerd Font Mono"
+    family: "Hack Nerd Font"
     style: Italic
   bold_italic:
-    family: "FiraCode Nerd Font Mono"
+    family: "Hack Nerd Font"
     style: Bold Italic
 
   # Point size
