--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,6 +52,11 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
 # buffer
 bind Space choose-buffer
 
