--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,166 +1,71 @@
-set -g default-shell /bin/zsh
-
-# remap prefix to Control + a
-unbind C-b
-set -g prefix C-a
-#bind C-a send-prefix
-bind-key a  send-prefix
-
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf
-
-# colors
-set -g default-terminal "screen-256color"
+# -- general -------------------------------------------------------------------------------------------------
+set-option -g default-shell $SHELL                              # Default shell
+set-option -g default-command $SHELL                              # Default shell
+set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
+set -s escape-time 1
+set -g history-limit 50000
+set -g prefix C-a                                               # remap prefix to Control + a
+bind C-a send-prefix                                            # bind 'C-a C-a' to type 'C-a'
+unbind C-b
+bind C-s set-window-option synchronize-panes                    # Sync panes
+bind P pipe-pane -o "cat>>~/#W.log"\; display "Log on ~/#W.log" # Log to file
+bind r source-file ~/.tmux.conf \; display "Reloaded!"          # Reload
+set -g focus-events on
 
-# stop messing with escape
-set -sg escape-time 0
+# -- display -------------------------------------------------------------------------------------------------
+set -g base-index 1                                             # Base index for windows
+set -g pane-base-index 1                                        # Base index for panes
+set -g monitor-activity on
+set -g visual-activity off
+setw -g automatic-rename on                                     # rename window to reflect current program
+set -g renumber-windows on                                      # renumber windows when a window is closed
+set -g set-titles on                                            # set terminal title
+set -g set-titles-string '#h  #S  #I #W'
+set -g display-panes-time 800                                   # slightly longer pane indicators display time
+set -g display-time 4000                                        # slightly longer status messages display time
+set -g status-interval 5                                       # redraw status line every 10 seconds
 
-# mouse
-set -g mouse on
-
-# start window numbering at 1 for easier switching
-set -g base-index 1
-setw -g pane-base-index 1
-
-# listen to alerts from all windows
-set -g bell-action any
-
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
-
-bind p previous-window
-
-# screen like window toggling
-bind Tab last-window
-bind Escape copy-mode
-
-# rebind pane tiling
-bind V split-window -h
-bind H split-window
-
-# bind fast session switching
-unbind S
-bind S command-prompt "attach-session -d -t %1"
-
-# vim  bindings
-set-window-option -g mode-keys vi
-bind h select-pane -L
+# -- navigation ----------------------------------------------------------------------------------------------
+set-option -g mouse on                                          # Mouse
+setw -g mode-keys vi                                            # vi keys
+bind h select-pane -L                                           # Move between panes h,j,k,l
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-
-# buffer
-bind Space choose-buffer
-
-# bind resize commands to keys
-bind = resize-pane -D 5
-bind + resize-pane -U 5
-bind < resize-pane -L 10
-bind > resize-pane -R 10
-
-
-set -g status-interval 1
-
-## COLORSCHEME: gruvbox dark
-
-set-option -g status "on"
-
-
-
-# default statusbar color
-
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
-
-
-
-# default window title colors
-
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
-
-
-
-# default window with an activity alert
-
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
-
-
-
-# active window title colors
-
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
-
-
-
-# pane border
-
-set-option -g pane-active-border-style fg=colour250 #fg2
-
-set-option -g pane-border-style fg=colour237 #bg1
-
-
-
-# message infos
-
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-
-
-# writing commands inactive
-
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-
-
-# pane number display
-
-set-option -g display-panes-active-colour colour250 #fg2
-
-set-option -g display-panes-colour colour237 #bg1
-
-
-
-# clock
-
-set-window-option -g clock-mode-colour colour109 #blue
-
-
-
-# bell
-
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
-
-
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-
-set-option -g status-justify "left"
-
-set-option -g status-left-style none
-
-set-option -g status-left-length "80"
-
-set-option -g status-right-style none
-
-set-option -g status-right-length "80"
-
-set-window-option -g window-status-separator ""
-
-
-
-set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
-
-set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
-
-
-
-set-window-option -g window-status-current-format "#[fg=colour237, bg=colour214, nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
-
-set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
+bind | split-window -h                                          # Split panes with | and -
+bind - split-window -v
+
+bind -r H resize-pane -L 5                                      # Pane resing H,J,K,L
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+bind -r C-h select-window -t :-                                 # Quick windows selection
+bind -r C-l select-window -t :+
+
+# -- copy mode -----------------------------------------------------------------------------------------------
+bind Escape copy-mode
+bind C-p run-shell "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+bind C-y run-shell "tmux show-buffer | xclip -sel clip -i"
+unbind p
+bind p paste-buffer
+
+# -- theme --------------------------------------------------------------------------------------------------
+# source ~/.config/tmux-themes/nightfox_tmux.tmux
+source ~/.config/tmux-themes/duskfox_tmux.tmux.config
+# source ~/.config/tmux-themes/gruvbox-material_tmux.tmux
+
+# -- plugin --------------------------------------------------------------------------------------------------
+set -g @plugin 'tmux-plugins/tpm'                               # List of plugins
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'junegunn/tmux-fzf-url'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'laktak/extrakto'
+
+run '~/.tmux/plugins/tpm/tpm'                                   # Initialize TMUX plugin manager (keep bottom)
