--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,11 @@
 # -- general -------------------------------------------------------------------------------------------------
-set-option -g default-shell $SHELL                              # Default shell
-set-option -g default-command $SHELL                              # Default shell
-set -g default-terminal "tmux-256color"
+set -g default-shell /bin/zsh
+# set-option -g default-shell $SHELL                              # Default shell
+# set-option -g default-command $SHELL                              # Default shell
+set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
-set -s escape-time 1
+
+set -s escape-time 0
 set -g history-limit 50000
 set -g prefix C-a                                               # remap prefix to Control + a
 bind C-a send-prefix                                            # bind 'C-a C-a' to type 'C-a'
@@ -34,8 +36,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind | split-window -h                                          # Split panes with | and -
-bind - split-window -v
+bind H split-window -h                                          # Split panes with | and -
+bind V split-window -v
 
 bind -r H resize-pane -L 5                                      # Pane resing H,J,K,L
 bind -r J resize-pane -D 5
@@ -60,12 +62,7 @@ source ~/.config/tmux-themes/duskfox_tmux.tmux.config
 # -- plugin --------------------------------------------------------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'                               # List of plugins
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'junegunn/tmux-fzf-url'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'laktak/extrakto'
 
 run '~/.tmux/plugins/tpm/tpm'                                   # Initialize TMUX plugin manager (keep bottom)
