--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,8 +36,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind H split-window -h                                          # Split panes with | and -
-bind V split-window -v
+bind V split-window -h                                          # Split panes with | and -
+bind H split-window -v
 
 bind -r H resize-pane -L 5                                      # Pane resing H,J,K,L
 bind -r J resize-pane -D 5
