Added rust tools and some misc changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ set -g visual-activity off
 setw -g automatic-rename on                                     # rename window to reflect current program
 set -g renumber-windows on                                      # renumber windows when a window is closed
 set -g set-titles on                                            # set terminal title
-set -g set-titles-string '#h  #S  #I #W'
+set -g set-titles-string '#W (#I) [#S]'
 set -g display-panes-time 800                                   # slightly longer pane indicators display time
 set -g display-time 4000                                        # slightly longer status messages display time
 set -g status-interval 5                                       # redraw status line every 10 seconds
@@ -49,8 +49,9 @@ bind -r C-l select-window -t :+
 
 # -- copy mode -----------------------------------------------------------------------------------------------
 bind Escape copy-mode
-bind C-p run-shell "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
-bind C-y run-shell "tmux show-buffer | xclip -sel clip -i"
+bind C-p run-shell "tmux set-buffer \"$(pbcopy -o)\"; tmux paste-buffer"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
+bind C-y run-shell "tmux show-buffer | pbcopy -sel clip -i"
 unbind p
 bind p paste-buffer
 
