Changed p10k theme, and added catppuccin_tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,7 +57,8 @@ bind p paste-buffer
 
 # -- theme --------------------------------------------------------------------------------------------------
 # source ~/.config/tmux-themes/nightfox_tmux.tmux
-source ~/.config/tmux-themes/duskfox_tmux.tmux.config
+# source ~/.config/tmux-themes/duskfox_tmux.tmux.config
+source ~/.config/tmux-themes/catppuccin_tmux.tmux.conf
 # source ~/.config/tmux-themes/gruvbox-material_tmux.tmux
 
 # -- plugin --------------------------------------------------------------------------------------------------
