Fixed tmux theme to be more sane, start panes in same folder

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,8 +36,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind V split-window -h                                          # Split panes with | and -
-bind H split-window -v
+bind V split-window -h -c "#{pane_current_path}"                # Split panes with V and H
+bind H split-window -v -c "#{pane_current_path}"
 
 bind -r H resize-pane -L 10                                      # Pane resing H,J,K,L
 bind -r J resize-pane -D 10
