Remove tpm from tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,9 +62,9 @@ source ~/.config/tmux-themes/catppuccin_tmux.tmux.conf
 # source ~/.config/tmux-themes/gruvbox-material_tmux.tmux
 
 # -- plugin --------------------------------------------------------------------------------------------------
-set -g @plugin 'tmux-plugins/tpm'                               # List of plugins
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'junegunn/tmux-fzf-url'
-set -g @plugin 'sainnhe/tmux-fzf'
+# set -g @plugin 'tmux-plugins/tpm'                               # List of plugins
+# set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'junegunn/tmux-fzf-url'
+# set -g @plugin 'sainnhe/tmux-fzf'
 
-run '~/.tmux/plugins/tpm/tpm'                                   # Initialize TMUX plugin manager (keep bottom)
+# run '~/.tmux/plugins/tpm/tpm'                                   # Initialize TMUX plugin manager (keep bottom)
