Some new keybinds and misc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,3 +68,6 @@ source ~/.config/tmux-themes/catppuccin_tmux.tmux.conf
 # set -g @plugin 'sainnhe/tmux-fzf'
 
 # run '~/.tmux/plugins/tpm/tpm'                                   # Initialize TMUX plugin manager (keep bottom)
+
+# Needed for upterm
+set-option -ga update-environment " UPTERM_ADMIN_SOCKET"
