--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -71,16 +71,16 @@ colors:
 
 font:
   # normal:
-  #   family: "JetBrainsMono Nerd Font Mono"
+  #   family: "JetBrains Mono NL"
   #   style: Regular
   # bold:
-  #   family: "JetBrainsMono Nerd Font Mono"
+  #   family: "JetBrains Mono NL"
   #   style: Bold
   # italic:
-  #   family: "JetBrainsMono Nerd Font Mono"
+  #   family: "JetBrains Mono NL"
   #   style: Italic
   # bold_italic:
-  #   family: "JetBrainsMono Nerd Font Mono"
+  #   family: "JetBrains Mono NL"
   #   style: Bold Italic
 
   normal:
