--- a/.config/jesseduffield/lazygit/config.yml
+++ b/.config/jesseduffield/lazygit/config.yml
@@ -3,22 +3,27 @@ startuppopupversion: 1
 
 gui:
   # stuff relating to the UI
+  showIcons: true
   scrollHeight: 2 # how many lines you scroll by
   scrollPastBottom: true # enable scrolling past the bottom
   sidePanelWidth: 0.3333 # number from 0 to 1
   theme:
-    lightTheme: false # For terminals with a light background
-    activeBorderColor:
-      - white
-      - bold
-    inactiveBorderColor:
-      - green
-    optionsTextColor:
-      - blue
     selectedLineBgColor:
-      - reverse
+      - black
     selectedRangeBgColor:
-      - reverse
+      - black  # theme:
+  #   lightTheme: false # For terminals with a light background
+  #   activeBorderColor:
+  #     - white
+  #     - bold
+  #   inactiveBorderColor:
+  #     - green
+  #   optionsTextColor:
+  #     - blue
+  #   selectedLineBgColor:
+  #     - reverse
+  #   selectedRangeBgColor:
+  #     - reverse
   commitLength:
     show: true
   mouseEvents: true
