--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,19 @@
 # -- general -------------------------------------------------------------------------------------------------
 set -g default-shell /bin/zsh
 # set-option -g default-shell $SHELL                              # Default shell
-# set-option -g default-command $SHELL                              # Default shell
+# set-option -g default-command $SHELL                            # Default shell
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
+
+set -g @plugin 'tmux-plugins/tpm'                                 # List of plugins
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'junegunn/tmux-fzf-url'
+# set -g @plugin 'sainnhe/tmux-fzf'
+
+set -g @catppuccin_flavour 'mocha' # latte, frappe, macchiato, mocha
 
 set -s escape-time 0
 set -g history-limit 50000
@@ -44,8 +54,8 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
-bind -r C-h select-window -t :-                                 # Quick windows selection
-bind -r C-l select-window -t :+
+# bind -r C-h select-window -t :-                                 # Quick windows selection
+# bind -r C-l select-window -t :+
 
 # -- copy mode -----------------------------------------------------------------------------------------------
 bind Escape copy-mode
@@ -54,11 +64,14 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection 
 bind C-y run-shell "tmux show-buffer | pbcopy -sel clip -i"
 unbind p
 bind p paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # -- theme --------------------------------------------------------------------------------------------------
 # source ~/.config/tmux-themes/nightfox_tmux.tmux
 # source ~/.config/tmux-themes/duskfox_tmux.tmux.config
-source ~/.config/tmux-themes/catppuccin_tmux.tmux.conf
+# source ~/.config/tmux-themes/catppuccin_tmux.tmux.conf
 # source ~/.config/tmux-themes/gruvbox-material_tmux.tmux
 
 # -- plugin --------------------------------------------------------------------------------------------------
@@ -67,7 +80,8 @@ source ~/.config/tmux-themes/catppuccin_tmux.tmux.conf
 # set -g @plugin 'junegunn/tmux-fzf-url'
 # set -g @plugin 'sainnhe/tmux-fzf'
 
-# run '~/.tmux/plugins/tpm/tpm'                                   # Initialize TMUX plugin manager (keep bottom)
 
 # Needed for upterm
 set-option -ga update-environment " UPTERM_ADMIN_SOCKET"
+
+run '~/.tmux/plugins/tpm/tpm'                                   # Initialize TMUX plugin manager (keep bottom)
