--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,11 @@
 # -- general -------------------------------------------------------------------------------------------------
 set -g default-shell /bin/zsh
-# set-option -g default-shell $SHELL                              # Default shell
-# set-option -g default-command $SHELL                            # Default shell
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 set -g @plugin 'tmux-plugins/tpm'                                 # List of plugins
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
 # set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'junegunn/tmux-fzf-url'
 # set -g @plugin 'sainnhe/tmux-fzf'
@@ -36,7 +33,7 @@ set -g set-titles on                                            # set terminal t
 set -g set-titles-string '#W (#I) [#S]'
 set -g display-panes-time 800                                   # slightly longer pane indicators display time
 set -g display-time 4000                                        # slightly longer status messages display time
-set -g status-interval 5                                       # redraw status line every 10 seconds
+set -g status-interval 5                                        # redraw status line every 10 seconds
 
 # -- navigation ----------------------------------------------------------------------------------------------
 set-option -g mouse on                                          # Mouse
@@ -54,7 +51,7 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
-# bind -r C-h select-window -t :-                                 # Quick windows selection
+# bind -r C-h select-window -t :-                                # Quick windows selection
 # bind -r C-l select-window -t :+
 
 # -- copy mode -----------------------------------------------------------------------------------------------
@@ -68,18 +65,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# -- theme --------------------------------------------------------------------------------------------------
-# source ~/.config/tmux-themes/nightfox_tmux.tmux
-# source ~/.config/tmux-themes/duskfox_tmux.tmux.config
-# source ~/.config/tmux-themes/catppuccin_tmux.tmux.conf
-# source ~/.config/tmux-themes/gruvbox-material_tmux.tmux
-
-# -- plugin --------------------------------------------------------------------------------------------------
-# set -g @plugin 'tmux-plugins/tpm'                               # List of plugins
-# set -g @plugin 'tmux-plugins/tmux-battery'
-# set -g @plugin 'junegunn/tmux-fzf-url'
-# set -g @plugin 'sainnhe/tmux-fzf'
-
+bind C-l send-keys 'C-l'
 
 # Needed for upterm
 set-option -ga update-environment " UPTERM_ADMIN_SOCKET"
