--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,13 +4,16 @@ set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 set -g @plugin 'tmux-plugins/tpm'                                 # List of plugins
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'junegunn/tmux-fzf-url'
 # set -g @plugin 'sainnhe/tmux-fzf'
 
-set -g @catppuccin_flavour 'mocha' # latte, frappe, macchiato, mocha
+# set -g @catppuccin_flavour 'mocha' # latte, frappe, macchiato, mocha
+
+source ~/.config/tmux/catppuccin_tmux.tmux.conf
 
 set -s escape-time 0
 set -g history-limit 50000
@@ -44,7 +47,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 bind V split-window -h -c "#{pane_current_path}"                # Split panes with V and H
-bind H split-window -v -c "#{pane_current_path}"
+bind S split-window -v -c "#{pane_current_path}"
 
 bind -r H resize-pane -L 10                                      # Pane resing H,J,K,L
 bind -r J resize-pane -D 10
