Open tmux window in same folder as current window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,7 @@ bind l select-pane -R
 
 bind V split-window -h -c "#{pane_current_path}"                # Split panes with V and H
 bind S split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 bind -r H resize-pane -L 10                                      # Pane resing H,J,K,L
 bind -r J resize-pane -D 10
