--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -91,7 +91,7 @@ font:
   #   style: Bold Italic
 
   normal:
-    family: "FiraCode Nerd Font"
+    family: 'JetBrainsMono Nerd Font Mono'
     style: Regular
   # Point size
   size: 16.0
@@ -105,6 +105,7 @@ font:
 
 window:
   title: Alacritty
+  decorations: buttonless
   padding:
     x: 0
     y: 0
