--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,14 +4,10 @@ set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 set -g @plugin 'tmux-plugins/tpm'                                 # List of plugins
-# set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-battery'
-# set -g @plugin 'junegunn/tmux-fzf-url'
-# set -g @plugin 'sainnhe/tmux-fzf'
-
-# set -g @catppuccin_flavour 'mocha' # latte, frappe, macchiato, mocha
+set -g @plugin 'junegunn/tmux-fzf-url'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 source ~/.config/tmux/catppuccin_tmux.tmux.conf
 
@@ -50,10 +46,10 @@ bind V split-window -h -c "#{pane_current_path}"                # Split panes wi
 bind S split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-bind -r H resize-pane -L 10                                      # Pane resing H,J,K,L
-bind -r J resize-pane -D 10
-bind -r K resize-pane -U 10
-bind -r L resize-pane -R 10
+bind -r H resize-pane -L 20                                      # Pane resing H,J,K,L
+bind -r J resize-pane -D 20
+bind -r K resize-pane -U 20
+bind -r L resize-pane -R 20
 
 # bind -r C-h select-window -t :-                                # Quick windows selection
 # bind -r C-l select-window -t :+
