--- a/.ideavimrc
+++ b/.ideavimrc
@@ -11,14 +11,17 @@ set highlightedyank
 set sneak
 set which-key
 set NERDTree
+set multiple-cursors
+set matchit
+set quickscope
 
 """ Plugin settings -------------------------
 let g:argtextobj_pairs="[:],(:),<:>"
 
 """ Common settings -------------------------
 set showmode
-set incsearch
 set smartcase
+set incsearch
 set nu
 set scrolloff=5
 set relativenumber
@@ -119,8 +122,6 @@ map gy          <Action>(GotoImplementation)
 map gr          <Action>(FindUsages)
 map ]e          <Action>(GotoNextError)
 map [e          <Action>(GotoPreviousError)
-map <C-j>       <Action>(GotoNextError)
-map <C-k>       <Action>(GotoPreviousError)
 map <C-f>  <Action>(ShowIntentionActions)
 
 let g:WhichKeyDesc_lang = "<Space>c  Code (LSP)"
