--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 # font_family      FiraCode Nerd Font Mono
 # font_family        JetBrainsMono Nerd Font
 # font_family        Iosevka Nerd Font
-font_family        MonaspiceKR NF
-# macos_thicken_font 0.2
+font_family        MonaspiceKR NFP
+macos_thicken_font 0.1
 
 font_size 15.0
 disable_ligatures never
@@ -48,7 +48,7 @@ bell_border_color       #F9E2AF
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
-hide_window_decorations yes
+# hide_window_decorations yes
 macos_window_resizable yes
 
 # Tab bar colors
