--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -12,7 +12,7 @@ size = 16.0
 
 [font.glyph_offset]
 x = 0
-y = 1
+y = 0
 
 [font.normal]
 family = "MonaspiceKR NF"
@@ -56,9 +56,9 @@ save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
 [window]
-decorations = "buttonless"
 dynamic_padding = true
 title = "Alacritty"
+decorations = "none"
 
 [window.class]
 general = "Alacritty"
