--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'junegunn/tmux-fzf-url'
 set -g @plugin 'sainnhe/tmux-fzf'
 
+set -g @plugin 'omerxx/tmux-sessionx'
+
 source ~/.config/tmux/catppuccin_tmux.tmux.conf
+
+set -g @sessionx-zoxide-mode 'on'
 
 set -s escape-time 0
 set -g history-limit 50000
