Switcher in rider

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -69,6 +69,10 @@ let g:WhichKeyDesc_buffer_right = "<Space>bl Close all to the right"
 map <leader>bl <Action>(CloseAllToTheRight)
 let g:WhichKeyDesc_buffer_right = "<Space>bl Close all to the right"
 map <leader>bd <Action>(CloseContent)
+let g:WhichKeyDesc_buffer_right = "<Space>bf Switcher"
+map <leader>bf <Action>(Switcher)>
+let g:WhichKeyDesc_buffer_right = "<Space>bb Switcher"
+map <leader>bb <Action>(Switcher)>
 
 " Git
 let g:WhichKeyDesc_git = "<Space>g  Git"
