--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,11 @@
 # font_family      FiraCode Nerd Font Mono
-# font_family        JetBrainsMono Nerd Font
+font_family        JetBrainsMono Nerd Font
 # font_family        Iosevka Nerd Font
-font_family        MonaspiceKR NFP
+font_family        MonaspiceKR NF
 macos_thicken_font 0.1
+macos_hide_titlebar yes
 
-font_size 15.0
+font_size 16.0
 disable_ligatures never
 # cursor none
 # cursor_text_color background
