--- a/.ideavimrc
+++ b/.ideavimrc
@@ -13,7 +13,7 @@ set which-key
 set NERDTree
 set multiple-cursors
 set matchit
-set quickscope
+" set quickscope
 
 """ Plugin settings -------------------------
 let g:argtextobj_pairs="[:],(:),<:>"
@@ -27,6 +27,7 @@ set scrolloff=5
 set relativenumber
 set number 
 set notimeout
+set hlsearch
 
 """ Idea specific settings ------------------
 set ideajoin
@@ -46,6 +47,7 @@ map <S-l>        <Action>(NextTab)
 map <s-h>     <Action>(PreviousTab)
 
 map <leader>z   <Action>(ToggleDistractionFreeMode)
+map <leader>h   :nohlsearch<CR>
 
 map <C-h>       <Action>(NextSplitter)
 map <C-l>       <Action>(PrevSplitter)
