Small ui changes

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,7 +2,7 @@ import = ["/Users/andersns/.config/alacritty/catppuccin/catppuccin-mocha.toml"]
 live_config_reload = true
 
 [colors]
-draw_bold_text_with_bright_colors = true
+# draw_bold_text_with_bright_colors = true
 
 [env]
 TERM = "xterm-256color"
@@ -23,7 +23,7 @@ style = "Regular"
 
 [font.offset]
 x = 0
-y = 1
+y = 0
 
 [[keyboard.bindings]]
 action = "Paste"
