Add wezterm config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,9 @@ bind P pipe-pane -o "cat>>~/#W.log"\; display "Log on ~/#W.log" # Log to file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"          # Reload
 set -g focus-events on
 
+set-option -g allow-passthrough on                              # To make zen mode work in wezterm
+
+
 # -- display -------------------------------------------------------------------------------------------------
 set -g base-index 1                                             # Base index for windows
 set -g pane-base-index 1                                        # Base index for panes
