--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -13,13 +13,13 @@ after-startup-command = [
   'exec-and-forget borders active_color=0xFFCBA6F7 inactive_color=0xff494d64 width=5.0'
 
   # if sketchybar
-  ,'exec-and-forget sketchybar'
+  # ,'exec-and-forget sketchybar'
 ]
   
 # if sketchybar
-exec-on-workspace-change = ['/bin/bash', '-c',
-  'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
-]
+# exec-on-workspace-change = ['/bin/bash', '-c',
+#   'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
+# ]
 
 # Start AeroSpace at login
 start-at-login = false
