Add keybind for global errors in rider

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -115,7 +115,9 @@ map gy          <Action>(GotoImplementation)
 map gr          <Action>(FindUsages)
 map ]e          <Action>(GotoNextError)
 map [e          <Action>(GotoPreviousError)
-map <C-f>  <Action>(ShowIntentionActions)
+map g[e         <Action>(ReSharperGotoNextErrorInSolution)
+map g]e         <Action>(ReSharperGotoPrevErrorInSolution)
+map <C-f>       <Action>(ShowIntentionActions)
 
 map <leader>ca  <Action>(ShowIntentionActions)
 map <leader>cr  <Action>(RenameElement)
