--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,3 @@
-import = ["/Users/andersns/.config/alacritty/catppuccin/catppuccin-mocha.toml"]
-live_config_reload = true
 
 [colors]
 # draw_bold_text_with_bright_colors = true
@@ -70,3 +68,7 @@ instance = "Alacritty"
 [window.padding]
 x = 0
 y = 0
+
+[general]
+live_config_reload = true
+import = ["/Users/andersns/.config/alacritty/catppuccin/catppuccin-mocha.toml"]
